<resources>
    <string name="app_name">dangtrungduc_1706020011</string>
    <string name="login">Login</string>
    <string name="username">UserName</string>
    <string name="password">passWord</string>
    <string name="danh_sach_mon_hoc">danh sach mon hoc</string>
    <string name="t_n_m_n_h_c">Tên Môn Học:</string>
    <string name="m_m_n_h_c">Mã Môn Học:</string>
    <string name="s_t_n_ch">Số Tín Chỉ:</string>
    <string name="chi_ti_t_m_n_h_c">chi tiết môn học</string>
    <string name="h_v_t_n">Họ Và Tên:</string>
    <string name="gi_ng_vi_n">Giảng Viên:</string>
    <string name="danh_s_ch_m_n_h_c">Danh sách môn học</string>
    <string name="ng_nh">Ngành:</string>
    <string name="t_n_ch">Tín Chỉ:</string>
    <string name="mssv">MSSV:</string>
    <string name="update">Update</string>
    <string name="edit">Edit</string>

</resources>
