<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_height="match_parent"
    android:padding="10dp"
    android:layout_width="match_parent"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <ImageView
        android:layout_gravity="center"
        android:src="@drawable/ic_person_black_24dp"
        android:textColor="@color/white"
        android:background="@drawable/custom_button"
        android:gravity="center"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:text="@string/login"
        android:textSize="50sp"
        />
    <EditText
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/username"
        android:id="@+id/edt_UserName"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:id="@+id/edt_password"
        android:inputType="textPassword"/>
    <Button
        android:textColor="@color/white"
        android:layout_marginTop="10dp"
        android:background="@drawable/custom_button"
        android:layout_gravity="center"
        android:text="@string/login"
        android:id="@+id/btn_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
</LinearLayout>