<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Detail_Activity">
    <TextView
        android:layout_gravity="center"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/background1"
        android:textSize="40sp"
        android:text="@string/chi_ti_t_m_n_h_c"/>
    <LinearLayout
        android:layout_marginBottom="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:textColor="@color/black"
            android:textSize="25sp"
            android:textStyle="bold"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/h_v_t_n"/>
        <TextView
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_weight="2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/tvTENHOCSINH"/>
    </LinearLayout>


    <LinearLayout
        android:layout_marginBottom="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:textColor="@color/black"
            android:textSize="25sp"
            android:textStyle="bold"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/ng_nh"/>
        <TextView
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_weight="2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/tvNGANH"/>
    </LinearLayout>



    <LinearLayout
        android:layout_marginBottom="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:textColor="@color/black"
            android:textSize="25sp"
            android:textStyle="bold"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/mssv"/>
        <TextView
            android:textColor="@color/black"
            android:textSize="20sp"
            android:layout_weight="2"
            android:textStyle="bold"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/tvMSSV"/>
        <TextView
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/t_n_ch"
            android:layout_height="wrap_content" />
        <TextView
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/tv_TINCHI"/>
    </LinearLayout>



    <LinearLayout
        android:layout_marginBottom="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:textColor="@color/black"
            android:textSize="25sp"
            android:textStyle="bold"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/t_n_m_n_h_c"/>
        <TextView
            android:gravity="left"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/tvTENMONHOC"/>
    </LinearLayout>



    <LinearLayout
        android:layout_marginBottom="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:textColor="@color/black"
            android:textSize="25sp"
            android:textStyle="bold"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/m_m_n_h_c"/>
        <TextView
            android:gravity="left"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/tvMAMONHOC"/>
    </LinearLayout>



    <LinearLayout
        android:layout_marginBottom="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:gravity="left"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:textStyle="bold"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/gi_ng_vi_n"/>
        <TextView
            android:gravity="left"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_weight="2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/tvGIANGVIEN"/>
    </LinearLayout>
</LinearLayout>